frontend/public/css/style.css
/* ... */
/* LANDING PAGE END HERE*/

/* !!!!!!!!ABOUT PAGE CSS START!!!!!!!!*/

.abg_responsiveImages {
    /* width: 100%;
    height: auto; */
    /* position: absolute; */
    width: 376px;
    height: 298px;
    left: 315px;
    top: 830px;
    padding: 5% 5% 5% 7%;
}

.abg_responsiveImages1 {
    /* width: 100%;
    height: auto; */
    /* position: absolute; */
    width: 550px;
    height: 550px;
    left: 315px;
    top: 830px;
    padding: 5% 5% 5% 7%;

}


/* Section One CSS */

#abg_sectionOne {
    height: 100vh;
    /* background: url(../images/test.jpg)no-repeat center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover; */
}

.abg_et_pb_row_0 {
    max-width: 100% !important;
    width: 100% !important;
    background-size: cover;
    padding-bottom: 10%;
    padding-top: 0;
    overflow: visible !important;
    z-index: 3;
    max-width: 100% !important;
    width: 100%;
}

.abg_et_pb_row_1 {
    background-color: #ffffff;
    position: absolute;
    bottom: 0;
    left: 0;
    height: 15%;
    z-index: 2;
    max-width: 100% !important;
    width: 100%;
}

.abg_sectionMainImage {
    position: absolute;
    z-index: 10;
    top: 11vh;
    height: 89vh;
    width: 64vw;
    left: 30vw;
}

.abg_sectionOneTitle {
    position: absolute;
    width: 40%;
    top: 20%;
    z-index: 11;
    left: 12%;
    font-size: 5.5vw;
    font-weight: bold;
    color: #26A9E0;
}

/* Section Two CSS */

#abg_sectionTwo {
    height: 100%;
    background-color: #FFFFFF;
    padding-top: 20vh;
}

#abg_infoSection {
    /* padding-left: 29%; */
    padding-right: 5%;
}

/* .abg_sectionTwoSubheader {
    font-family: Space Mono;
    font-weight: bold;
    font-size: 4rem;
    padding-left: 1.3%;
} */


/* New */
.abg_sectionTwoSubheader {
    /* position: absolute; */
    /* width: 135px; */
    height: 36px;
    left: 746px;
    top: 194px;

    /* font-family: Commuters Sans; */
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 100%;
/* identical to box height, or 36px */


    color: #424242;
}



/* .abg_sectionTwoHeader {
    font-size: 7rem;
    font-weight: bold;
    padding-left: 1%;
} */

/* New */
.abg_sectionTwoHeader {
/* position: absolute; */
    width: 442px;
    height: 72px;
    left: 740px;
    top: 254px;

    /* font-family: Commuters Sans; */
    font-style: normal;
    font-weight: 800;
    font-size: 72px;
    line-height: 100%;
    /* identical to box height, or 72px */


    /* Blue */

    color: #00A7E1;
}

.abg_section_1{
    display:flex;
    flex-direction: row; 
    align-items: center;
    /* align-self: flex-start; */
}

.abg_section_2{
    display:flex;
    flex-direction: row; 
    align-content: center;
    justify-content: center;
    /* align-self: flex-start; */
}


.abg_section_3{
    display:flex;
    flex-direction: row; 
    align-content: center;
    justify-content: center;
    /* align-self: flex-start; */

}

.bottom-container{
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
}



.abg_sectionTwoImageContainer3{
    padding: 0% 7% 5% 7%;
    height: 550px;
    width: 700px;
}


.abg_section_Header1{
    display:flex;
    flex-direction: column; 
    justify-content: center;
}

.abg_section_Header1 Row{
    --bs-gutter-x: 1.5rem;
    --bs-gutter-y: 0;
    display: flex;
    flex-wrap: wrap;
    margin-top: calc(-1 * var(--bs-gutter-y));
    margin-right: calc(-.5 * var(--bs-gutter-x));
    margin-left: calc(-.5 * var(--bs-gutter-x));
    padding-bottom: 5%;
}


.abg_sectionTwoHeaderInfo {
    /* font-weight: normal;
    font-size: 1.5rem;
    padding-left: 1.3%; */
    /* position: absolute; */
    padding-top: 2%;
    width: 595px;
    /* height: 196px; */
    /* left: 745px;
    top: 347px; */
    
    /* Body 1 */
    
    /* font-family: Outfit; */
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 28px;
    /* or 156% */
    
    
    color: #000000;



}

.abg_sectionTwoImageContainer {
    text-align: center;
    align-items: center;
}

/* .abg_sectionTwoButton {
    padding-left: 1%;
    background-image: url(./src/component/LearnMoreButton_Yellow.png);

} */

#abg_infoSection .col {
    padding: 50px 30px 70px 30px;
    display: flex;
    justify-content: center;
}


#abg_infoSection .col .row{
    padding-bottom: 5%;
}


.abg_headerRow {
    padding: 20px;
}

.abg_weAreSymbol {
    font-family: Space mono, sans-serif;
    font-style: normal;
    font-weight: bold;
    font-size: 1.5vw;
    color: black;
    position: absolute;
    top: 85.5%;
    left: 7.3%;
    z-index: 3;
}

.abg_generateSymbol {
    writing-mode: vertical-lr;
    font-family: Space mono, sans-serif;
    font-style: normal;
    font-weight: bold;
    font-size: 16vw;
    color: #26A9E0;
    position: relative;
    /* top: 85%; */
}

.abg_sectionTwoImageHeader {
    /* font-size: 4rem;
    font-weight: bold; */
    /* position: absolute; */
    width: 319px;
    height: 110px;
    left: 747px;
    top: 1150px;

    /* font-family: Commuters Sans; */
    font-style: normal;
    font-weight: bold;
    font-size: 40px;
    line-height: 100%;
    /* or 40px */

    text-transform: uppercase;
    padding-bottom: 2%;
    /* Grey */

    color: #424242;

    text-decoration: underline;
    -webkit-text-decoration-color: #00A7E1; /* Safari */  
    text-decoration-color: #00A7E1;
}


.abg_sectionTwoImageHeader2 {
 /* VISIT OUR SHOWCASE */


    /* position: absolute; */
    width: 261px;
    height: 110px;
    left: 315px;
    top: 1650px;
    /* font-family: Commuters Sans; */
    font-style: normal;
    font-weight: bold;
    font-size: 40px;
    line-height: 100%;
    text-transform: uppercase;
    color: #424242;
    padding-bottom: 2%;

    text-decoration: underline;
    -webkit-text-decoration-color: #FFC539; /* Safari */  
    text-decoration-color: #FFC539;

}
/* ... */

